refactor: extract the Java 8 api module under --release 8 (PR 0, phase 3b)
Move com.scalar.db.saga.api (14 types) and com.scalar.db.saga.exception
(11 types) -- with their tests -- entirely into the api module, where main
compiles under --release 8. Package names are unchanged, so core/daemon imports
resolve via the existing api(project(":api")) edge with no source changes.

This completes the api-module reorg: the Java 8 client/participant SDKs can now
depend on a minimal, Java-8-clean api surface (SagaOrchestrator + the step
contracts + value types + exceptions); the engine package stays internal.

Java-8 prep (required by --release 8):
- SagaDefinitionId: record -> final class; isBlank() -> trim().isEmpty()
- StepResult: Map.copyOf -> null-rejecting unmodifiable copy; instanceof pattern -> classic
- SagaStateSnapshot: instanceof pattern -> classic

Build: scalardb-saga.java8-conventions now applies --release 8 to compileJava
only (tests run at the JDK 21 toolchain, since only the published artifact must
be Java 8). spotbugs exclude.xml adds a bug-scoped CT_CONSTRUCTOR_THROW
suppression for the api/exception validating constructors (a Java-8-bytecode-only
finding that SpotBugs auto-suppresses at class version 59+).

All gates green; :api:compileJava verified green under --release 8.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>